Apache Tez Change Log
=====================

Release 0.5.5: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2552. CRC errors can cause job to run for very long time in large jobs.

ALL CHANGES:
  TEZ-2834. Make Tez preemption resilient to incorrect free resource reported
  by YARN
  TEZ-2812. Preemption sometimes does not respect heartbeats between preemptions
  TEZ-814.  Improve heuristic for determining a task has failed outputs
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
  same name
  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
  TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher.
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2630. TezChild receives IP address instead of FQDN.
  TEZ-2635. Limit number of attempts being downloaded in unordered fetch.
  TEZ-2636. MRInput and MultiMRInput should work for cases when there are 0 physical inputs.
  TEZ-2600. When used with HDFS federation(viewfs) ,tez will throw a error

Release 0.5.4: 2015-06-26

ALL CHANGES:
  TEZ-2569. branch 0.5 build fails due to cannot find symbol TaskAttemptTerminationCause
  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
  TEZ-2557. Port TEZ-1910 to branch-0.5.
  TEZ-2561. Port for TaskAttemptListenerImpTezDag should be configurable